--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Ubiqum Project</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
 
     <link rel="stylesheet" href="CSS/style.css">
 
@@ -20,9 +21,9 @@
 <div class="login-page">
     <div class="form">
         <form class="login-form">
-            <input type="text" placeholder="email"/>
-            <input type="password" placeholder="password"/>
-            <button>login</button>
+            <input class="email" type="text" placeholder="email"/>
+            <input class="password" type="password" placeholder="password"/>
+            <button class="button">login</button>
             <!--<p class="message">Not registered? <a href="#">Create an account</a></p>-->
         </form>
     </div>
