Login saves the user and password

--- a/index.html
+++ b/index.html
@@ -21,12 +21,12 @@
 
 <div class="login-page">
     <div class="form">
-        <form class="login-form">
-            <input class="email" type="text" placeholder="email"/>
-            <input class="password" type="password" placeholder="password"/>
+        <div class="login-form">
+            <input class="form-control" name="email" id="email" type="text" placeholder="email"/>
+            <input class="form-control" name="password" id="password" type="password" placeholder="password"/>
             <button class="button">login</button>
             <!--<p class="message">Not registered? <a href="#">Create an account</a></p>-->
-        </form>
+        </div>
     </div>
 </div>
 
