--- a/HTML/messages.html
+++ b/HTML/messages.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Messages</title>
+    <meta name="viewport" content="width=device-width, user-scalable=no">
 
-    <link rel="stylesheet" href="CSS/style.css">
+
+    <link rel="stylesheet" href="CSS/stylemessages.css">
 
 </head>
 <body>
-
+<p>sdwdwdwdw</p>
 </body>
 </html>
