--- a/index.html
+++ b/index.html
@@ -24,7 +24,8 @@
         <div class="login-form">
             <input class="form-control" name="email" id="email" type="text" placeholder="email"/>
             <input class="form-control" name="password" id="password" type="password" placeholder="password"/>
-            <button class="button">login</button>
+            <button class="button" id="login">login</button>
+            <button class="button" id="logout">log out</button>
             <!--<p class="message">Not registered? <a href="#">Create an account</a></p>-->
         </div>
     </div>
