--- a/messages.html
+++ b/messages.html
@@ -1,45 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Messages</title>
-    <!--<meta name="viewport" content="width=device-width, user-scalable=no">-->
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <head>
+        <meta charset="UTF-8">
+        <title>Messages</title>
+        <!--<meta name="viewport" content="width=device-width, user-scalable=no">-->
+        <meta name="viewport" content="width=device-width, initial-scale=1">
 
 
-    <link rel="stylesheet" href="CSS/stylemessages.css">
+        <link rel="stylesheet" href="CSS/stylemessages.css">
 
-    <!-- Latest compiled and minified CSS -->
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <!-- Latest compiled and minified CSS -->
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+        <!-- Latest compiled JavaScript -->
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 
-</head>
-<body>
-<button type="button" class="btn btn-danger">Log Out</button>
-<div class="username"></div>
+    </head>
+    <body>
+        <button type="button" class="btn btn-danger" id="logout">Log Out</button>
+        <div class="username"></div>
 
-<div class="container">
-    <h2>Ubiqum Project</h2>
-    <p>You can send messages to our Apps in this form bellow:</p>
-    <form>
-        <div class="form-group">
-            <label for="comment">Message:</label>
-            <textarea class="form-control" rows="5" id="comment"></textarea>
+        <div class="container">
+            <h2>Ubiqum Project</h2>
+            <p>You can send messages to our Apps in this form bellow:</p>
+            <form>
+                <div class="form-group">
+                    <label for="comment">Message:</label>
+                    <textarea class="form-control" rows="5" id="comment"></textarea>
+                </div>
+            </form>
+            <button type="button" class="btn btn-success">Send</button>
         </div>
-    </form>
-    <button type="button" class="btn btn-success">Send</button>
-</div>
 
+        <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
+        <script>
+            // Initialize Firebase
+            var config = {
+                apiKey: "AIzaSyC3fRsurholLQ_OH0OVN48rtrSblEfb1Eg",
+                authDomain: "ubiqum-project.firebaseapp.com",
+                databaseURL: "https://ubiqum-project.firebaseio.com",
+                storageBucket: "ubiqum-project.appspot.com",
+                messagingSenderId: "597896297392"
+            };
+            firebase.initializeApp(config);
+        </script>
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+        <script src="JS/script.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script src="JS/script.js"></script>
-
-
-</body>
+    </body>
 </html>
