--- a/index.html
+++ b/index.html
@@ -5,10 +5,9 @@
         <title>Ubiqum Project</title>
         <meta name="viewport" content="width=device-width, user-scalable=no">
 
-        <link rel="stylesheet" href="CSS/style.css">
-
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/style.css">
 
         <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
@@ -22,8 +21,8 @@
         <div class="login-page">
             <div class="form">
                 <div class="login-form">
-                    <input class="form-control" name="email" id="email" type="text" placeholder="email"/>
-                    <input class="form-control" name="password" id="password" type="password" placeholder="password"/>
+                    <input class="form-control" name="email" id="email" type="text" placeholder="email" value="usuario1@gmail.com"/>
+                    <input class="form-control" name="password" id="password" type="password" placeholder="password" value="123456"/>
                     <button class="button" id="login">login</button>
                     <!--<p class="message">Not registered? <a href="#">Create an account</a></p>-->
                 </div>
@@ -31,20 +30,7 @@
         </div>
 
         <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
-        <script>
-            // Initialize Firebase
-            var config = {
-                apiKey: "AIzaSyC3fRsurholLQ_OH0OVN48rtrSblEfb1Eg",
-                authDomain: "ubiqum-project.firebaseapp.com",
-                databaseURL: "https://ubiqum-project.firebaseio.com",
-                storageBucket: "ubiqum-project.appspot.com",
-                messagingSenderId: "597896297392"
-            };
-            firebase.initializeApp(config);
-        </script>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="JS/script.js"></script>
-
+        <script src="js/firebase.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
