--- a/messages.html
+++ b/messages.html
@@ -6,18 +6,15 @@
         <!--<meta name="viewport" content="width=device-width, user-scalable=no">-->
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
-
-        <link rel="stylesheet" href="CSS/stylemessages.css">
-
         <!-- Latest compiled and minified CSS -->
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <link rel="stylesheet" href="css/stylemessages.css">
 
         <!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 
         <!-- Latest compiled JavaScript -->
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-
     </head>
     <body>
         <button type="button" class="btn btn-danger" id="logout">Log Out</button>
@@ -36,20 +33,7 @@
         </div>
 
         <script src="https://www.gstatic.com/firebasejs/3.6.10/firebase.js"></script>
-        <script>
-            // Initialize Firebase
-            var config = {
-                apiKey: "AIzaSyC3fRsurholLQ_OH0OVN48rtrSblEfb1Eg",
-                authDomain: "ubiqum-project.firebaseapp.com",
-                databaseURL: "https://ubiqum-project.firebaseio.com",
-                storageBucket: "ubiqum-project.appspot.com",
-                messagingSenderId: "597896297392"
-            };
-            firebase.initializeApp(config);
-        </script>
-
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-        <script src="JS/script.js"></script>
-
+        <script src="js/firebase.js"></script>
+        <script src="js/script.js"></script>
     </body>
 </html>
